[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/Spider_Boss/SpiderBoss.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk01.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk02.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossAttack02.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk07.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk05.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk06.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossAttack03.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk03.png" type="Texture" id=9]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossWalk04.png" type="Texture" id=11]
[ext_resource path="res://Enemies/Spider_Boss/Animation/SpiderBossAttack01.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 128 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 256 )

[node name="Spider_Boss" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 4.71239
scale = Vector2( 6, 6 )
frames = SubResource( 2 )
animation = "Walk"
frame = 3
speed_scale = 2.0
playing = true

[node name="Area_Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Vision"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Answer" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 400.0
margin_top = 24.0
margin_right = 656.0
margin_bottom = 157.0
color = Color( 0, 0.00392157, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Answer"]
margin_left = 18.0
margin_top = 21.0
margin_right = 237.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Answer"]
margin_left = 62.9996
margin_top = 78.9995
margin_right = 204.0
margin_bottom = 115.999
text = "Responder"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area_Vision" to="." method="_on_Area_Vision_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="pressed" from="CanvasLayer/Answer/Button" to="." method="_on_Button_pressed"]
